# openapi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: UnityAssetsManager API
-  version: 1.2.12
+  version: 1.2.13
   description: API locale pour explorer et exporter des assets Unity (CSV/SQLite). Le port HTTP par défaut est 5003 et peut être modifié dans config/config.json.
 servers:
   - url: http://localhost:5003
@@ -468,10 +468,6 @@ components:
           type: array
           items:
             type: string
-        filter_columns:
-          type: array
-          items:
-            type: string
         filter_stack:
           type: array
           items:
@@ -489,10 +485,6 @@ components:
             type: string
         search:
           type: string
-        filter_columns:
-          type: array
-          items:
-            type: string
         filter_stack:
           type: array
           items:
